--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,7 +7,9 @@
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.ugui": "2.0.0",
     "com.unity.xr.arkit": "6.0.3",
+    "com.yuchen.ingame-console": "https://github.com/yuchenz27/unity-ingame-console.git",
     "jp.keijiro.osc-jack": "2.0.0",
+    "xiaobo.unity.toolkit.helper": "https://github.com/agalloch21/unity-toolkit-helper.git",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
